--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdparty/ejdb"]
 	path = 3rdparty/ejdb
-	url = https://github.com/Softmotions/ejdb.git
+	url = https://github.com/markusmarx/ejdb.git
