add performance tests, add server tests

--- a/test/tst_qtejdb/CMakeLists.txt
+++ b/test/tst_qtejdb/CMakeLists.txt
@@ -1,14 +1,8 @@
 find_package(Qt5Core)
 find_package(Qt5Test)
 
-MACRO(add_qejdb_test testname)
-  add_executable ( ${testname} ${testname}.cpp )
-  target_link_libraries ( ${testname} Qt5::Core Qt5::Test qtrpc2 qejdb qbson pthread z)
-  target_include_directories (${testname} PUBLIC ../../include)
-ENDMACRO()
+add_executable ( tst_qejdb main.cpp tst_qejdbdatabase.cpp tst_qejdbcollection.cpp tst_qejdbperformance.cpp)
+target_link_libraries ( tst_qejdb Qt5::Core Qt5::Test qtrpc2 qejdb qbson pthread z)
+target_include_directories (tst_qejdb PUBLIC ../../include)
 
-add_qejdb_test(tst_qejdbcollection)
-add_qejdb_test(tst_qejdbdatabase)
-
-add_test(tst_qejdbcollection tst_qejdbcollection)
-add_test(tst_qejdbdatabase tst_qejdbdatabase)
+add_test(tst_qejdb tst_qejdb)
