#33: add itemmodel, improve bson to variant convertion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,5 @@ add_subdirectory(test/tst_qtejdb)
 
 add_subdirectory(src/qtejdb_server)
 add_subdirectory(test/tst_qtejdbserver)
+
+add_subdirectory(src/qtejdb_model)
