#33 bug fix model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(src/qtejdb_server)
 add_subdirectory(test/tst_qtejdbserver)
 
 add_subdirectory(src/qtejdb_model)
+add_subdirectory(test/tst_qtejdbmodel)
