delete truncate from default open params; add concurrence tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-
+cmake_policy(SET CMP0028 OLD)
 project(qtejdb)
 
 # Find includes in corresponding build directories
@@ -11,6 +11,11 @@ set(LIBRARY_OUTPUT_PATH  ${PROJECT_BINARY_DIR}/lib)
 
 enable_testing()
 
+MACRO(add_qejdb_test testname)
+  add_executable ( ${testname} ${testname}.cpp )
+  target_link_libraries ( ${testname} Qt5::Core Qt5::Test qtrpc2 qejdb qbson pthread z)
+  target_include_directories (${testname} PUBLIC ../../include)
+ENDMACRO()
 
 add_subdirectory(3rdparty/qtrcp2)
 
@@ -25,3 +30,5 @@ add_subdirectory(test/tst_qtejdbserver)
 
 add_subdirectory(src/qtejdb_model)
 add_subdirectory(test/tst_qtejdbmodel)
+add_subdirectory(test/tst_concurrent)
+
