add qtquick tests, move qtejdbitemmodel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,9 +58,8 @@ add_subdirectory(test/tst_qtejdb)
 add_subdirectory(src/qtejdb_server)
 add_subdirectory(test/tst_qtejdbserver)
 
-add_subdirectory(src/qtejdb_model)
-add_subdirectory(test/tst_qtejdbmodel)
-add_subdirectory(test/tst_concurrent)
+#add_subdirectory(test/tst_qtejdbmodel)
+#add_subdirectory(test/tst_concurrent)
 
 add_subdirectory(src/qtejdb_qtquick)
 add_subdirectory(test/qtejdb_qtquick)
