add gtest as testframe work to qbson

--- a/src/qtejdb/CMakeLists.txt
+++ b/src/qtejdb/CMakeLists.txt
@@ -10,13 +10,6 @@ set(QEJDB_PUBLIC_HEADER
 )
 
 set(QEJDB_SOURCES
-    ../../3rdparty/ejdb/tcejdb/ejdb.c
-    ../../3rdparty/ejdb/tcejdb/ejdbutl.c
-    ../../3rdparty/ejdb/tcejdb/tcadb.c
-    ../../3rdparty/ejdb/tcejdb/tcbdb.c
-    ../../3rdparty/ejdb/tcejdb/tcfdb.c
-    ../../3rdparty/ejdb/tcejdb/tchdb.c
-    ../../3rdparty/ejdb/tcejdb/tctdb.c
     qejdbcollection.cpp 
 	qejdbdatabase.cpp 
 	qejdbexception.cpp 
@@ -35,7 +28,7 @@ add_library ( qejdb SHARED ${QEJDB_SOURCES} )
 
 target_include_directories (qejdb PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR} 
-        ${PROJECT_SOURCE_DIR}/3rdparty/ejdb/tcejdb/
+        ${EJDB_INCLUDE_PATH}
 	../qbson
         ${PROJECT_SOURCE_DIR}/3rdparty/qtrcp2/include
         ${PROJECT_SOURCE_DIR}/3rdparty/qtrcp2/lib
