--- a/test/qtejdb_qtquick/tst_qejdbmodel/CMakeLists.txt
+++ b/test/qtejdb_qtquick/tst_qejdbmodel/CMakeLists.txt
@@ -1,5 +1,23 @@
-project(tst_qejdbmodel_qml)
+enable_testing()
+find_package(Qt5Core)
+find_package(Qt5Test)
 
-add_custom_target("run" /usr/bin/qmlscene -I ${CMAKE_BINARY_DIR}/backend ${CMAKE_SOURCE_DIR}/app/saucybacon.qml
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
-#add_custom_target(tst_qejdbmodel_qml SOURCES ModelTest.qml)
+set(tst_qejdbmodel_SRCS demo.cpp)
+qt5_add_resources(tst_qejdbmodel_QRC demo.qrc)
+
+add_executable(tst_qejdbmodel ${tst_qejdbmodel_SRCS} ${tst_qejdbmodel_QRC})
+target_include_directories (tst_qejdb PUBLIC ../../include)
+
+
+target_link_libraries(
+    tst_qejdbmodel
+    Qt5::Qml
+    Qt5::Quick
+    Qt5::QuickTest
+    qejdb
+    qbson
+    qtrpc2
+    z
+)
+
+add_test(qejdbmodel tst_qejdbmodel)
