move unit tests to unit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ add_subdirectory(3rdparty/ejdb)
 add_subdirectory(3rdparty/qtrcp2)
 
 add_subdirectory(src)
-add_subdirectory(test)
+add_subdirectory(test/unit)
 #add_subdirectory(test/tst_qtejdb)
 
 #add_subdirectory(src/qtejdb_server)
