add first demo app, add colletionmodel

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -1,3 +1,32 @@
+# Download and install GoogleMock
+ExternalProject_Add(
+    gmock
+    URL https://googlemock.googlecode.com/files/gmock-1.7.0.zip
+    #SVN_REPOSITORY http://googlemock.googlecode.com/svn/trunk
+    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/3rdparty/googlemock
+    # Disable install step
+    INSTALL_COMMAND ""
+    UPDATE_COMMAND ""
+)
+
+# Create a libgmock target to be used as a dependency by test programs
+add_library(libgmock IMPORTED STATIC GLOBAL)
+add_dependencies(libgmock gmock)
+
+# Set gmock properties
+ExternalProject_Get_Property(gmock source_dir binary_dir)
+set_target_properties(libgmock PROPERTIES
+    "IMPORTED_LOCATION" "${binary_dir}/libgmock.a"
+    "IMPORTED_LINK_INTERFACE_LIBRARIES" "${CMAKE_THREAD_LIBS_INIT}"
+#    "INTERFACE_INCLUDE_DIRECTORIES" "${source_dir}/include"
+)
+# I couldn't make it work with INTERFACE_INCLUDE_DIRECTORIES
+include_directories("${source_dir}/include")
+include_directories("${source_dir}/gtest/include")
+
+
+
+
 set(MODULES qbson qtejdb itemmodel qtquickplugin)
 set(ALL_SRC)
 set(ALL_HDRS)
