--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ env:
         - CONFIGURATION=Release
 
 install:
-    - brew install qt5
-    - export PATH=/usr/local/opt/qt5/bin:$PATH
-    - git clone https://chromium.googlesource.com/external/googletest.git /Users/travis/build/googletest
+    - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
+    - sudo apt-get update
+    - sudo apt-get install qt5-default
 
 before_script:
     - mkdir build && cd build
