--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ env:
         - CONFIGURATION=Debug
         - CONFIGURATION=Release
 
-install:
-    - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
-    - sudo apt-get update
-    - sudo apt-get install qt5-default
+before_install:
+     - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+     - sudo apt-get update -qq
+     - sudo apt-get install qtbase5-dev qtdeclarative5-dev
+     - sudo apt-get install qt5-default qttools5-dev-tools
 
 before_script:
     - mkdir build && cd build
