--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: cpp
 
-env:
-    matrix:
-        - CONFIGURATION=Debug
-        - CONFIGURATION=Release
-
 before_install:
      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
@@ -13,7 +8,7 @@ before_install:
 
 before_script:
     - mkdir build && cd build
-    - cmake .. -DCMAKE_BUILD_TYPE=$CONFIGURATION
+    - cmake .. -DCMAKE_BUILD_TYPE=RELEASE
 
 script:
     - cmake --build .
