--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ before_install:
      - sudo apt-get update -qq
      - sudo apt-get install qtbase5-dev qtdeclarative5-dev
      - sudo apt-get install qt5-default qttools5-dev-tools
-     - sudo apt-get update cmake
 
 before_script:
+    - cmake --version
     - mkdir build && cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Release
 
