--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: cpp
 
 before_install:
+     - sudo add-apt-repository --yes ppa:kubuntu-ppa/backports
      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
      - sudo apt-get install qtbase5-dev qtdeclarative5-dev
      - sudo apt-get install qt5-default qttools5-dev-tools
+     - sudo apt-get install --only-upgrade cmake
 
 before_script:
     - cmake --version
