--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 
 before_install:
+     - sudo add-apt-repository --yes ppa:smspillaz/cmake-2.8.12
      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
      - sudo apt-get install qtbase5-dev qtdeclarative5-dev
