--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,20 @@ before_install:
      - sudo apt-get install qtbase5-dev qtdeclarative5-dev
      - sudo apt-get install qt5-default qttools5-dev-tools
      - sudo apt-get install cmake
-     - sudo apt-get install lcov gcov
+     # GCC / Clang (Needed until Travis CI updates to Ubuntu 14.04+)
+     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+     - sudo apt-get install -qq --force-yes g++-4.9
+     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
+     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+     - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
+     # LCOV (Needed until Travis CI updates to Ubuntu 14.04+)
+     - wget -O lcov.tar.gz http://downloads.sourceforge.net/ltp/lcov-1.11.tar.gz
+     - mkdir lcov
+     - tar -xzf lcov.tar.gz -C ./lcov --strip-components=1
+     - cd lcov
+     - sudo make install
+     - cd ..
+     - rm -Rf lcov lcov.tar.gz
 
 before_script:
     - cmake --version
