--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
      - sudo apt-get install qtbase5-dev qtdeclarative5-dev
      - sudo apt-get install qt5-default qttools5-dev-tools
      - sudo apt-get install cmake
+     - sudo apt-get install liblzma-dev
      # GCC / Clang (Needed until Travis CI updates to Ubuntu 14.04+)
      - sudo apt-get install -qq --force-yes g++-4.9
      - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
