--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-cmake_policy(SET CMP0028 OLD)
+#cmake_policy(SET CMP0028 OLD)
 project(qtejdb)
 
 option(BUILD_SHARED_LIBS "Build shared libraries (DLLs)." ON)
