--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
      - sudo add-apt-repository --yes ppa:kalakris/cmake
      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
-     - sudo apt-get install qtbase5-dev qtdeclarative5-dev
+     - sudo apt-get install qtbase5-dev qtdeclarative5-dev qtqml5-dev
      - sudo apt-get install qt5-default qttools5-dev-tools
      - sudo apt-get install cmake
      - sudo apt-get install liblzma-dev liblzo2-dev
