--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
      - sudo make install
      - cd ..
      - rm -Rf lcov lcov.tar.gz
+     - "export DISPLAY=:99.0"
+     - "sh -e /etc/init.d/xvfb start"
 
 before_script:
     - cmake --version
