--- a/test/unit_qml/CMakeLists.txt
+++ b/test/unit_qml/CMakeLists.txt
@@ -1,8 +1,10 @@
 enable_testing()
 
-find_package(Qt5Test)
+file(GLOB QML_JS_FILES *.qml *.js)
 
+add_custom_target(tst_qejdbmodel_QmlFiles ALL SOURCES ${QML_JS_FILES})
 set(tst_qejdbmodel_SRCS qtquicktest.cpp)
+
 qt5_add_resources(tst_qejdbmodel_QRC qtquicktest.qrc)
 
 add_executable(qtquicktest ${tst_qejdbmodel_SRCS} ${tst_qejdbmodel_QRC})
