--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,15 @@ branches:
     - gh-pages
 
 before_install:
+     # gcc 4.9
      - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+     # cmake 2.8.11
      - sudo add-apt-repository --yes ppa:kalakris/cmake
+     # repository for qt5
      - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
      - sudo apt-get update -qq
-     - sudo apt-get install qtbase5-dev qtdeclarative5-dev qtdeclarative5-test-plugin libqt5quick5 libqt5qml5 qtdeclarative5-qtquick2-plugin
-     - sudo apt-get install qt5-default qttools5-dev-tools
+install:     
+     - sudo apt-get install qtbase5-dev qtdeclarative5-dev qtdeclarative5-test-plugin libqt5quick5 libqt5qml5 qtdeclarative5-qtquick2-plugin qt5-default qttools5-dev-tools
      - sudo apt-get install cmake
      - sudo apt-get install liblzma-dev liblzo2-dev
      - sudo apt-get install libboost-all-dev
@@ -27,14 +30,21 @@ before_install:
      - sudo make install
      - cd ..
      - rm -Rf lcov lcov.tar.gz
+     # Start display server to run qmltests.
      - "export DISPLAY=:99.0"
      - "sh -e /etc/init.d/xvfb start"
+     - gem install coveralls-lcov
 
 before_script:
-    - cmake --version
     - mkdir build && cd build
-    - cmake .. -DCMAKE_BUILD_TYPE=Release
+    - cmake .. -DCMAKE_BUILD_TYPE=Debug
 
 script:
     - cmake --build .
     - ctest -V
+
+after_success:
+    - lcov --directory src --capture --output-file coverage.info
+    - lcov --remove coverage.info '*/*build*/*' '*/Qt/*' '*/3rdparty/*' 'test/*' '/usr/*' --output-file coverage.info.cleaned
+    - coveralls-lcov coverage.info.cleaned
+
