--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,6 @@ script:
 after_success:
     - lcov --directory src --capture --output-file coverage.info
     - lcov --remove coverage.info '*/*build*/*' '*/Qt/*' '*/3rdparty/*' 'test/*' '/usr/*' --output-file coverage.info.cleaned
-    - lcov --list converage.info.cleaned
+    - lcov --list coverage.info.cleaned
     - coveralls-lcov coverage.info.cleaned
 
