add arraypropertymodel to qtquickplugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,8 @@ add_subdirectory(src/qtquickplugin)
 add_subdirectory(test/unit)
 add_subdirectory(test/unit_qml)
 
+SETUP_TARGET_FOR_COVERAGE(test_coverage test coverage)
+
 #
 # ADD DEMO AND MANUAL TESTS
 #
