update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
 
 after_success:
     - lcov --directory src --capture --output-file coverage.info
-    - lcov --remove coverage.info '*/*build*/*' '*/Qt/*' '*/3rdparty/*' 'test/*' '/usr/*' --output-file coverage.info.cleaned
+    - lcov --remove coverage.info '*/Qt/*' '*/3rdparty/*' 'test/*' '/usr/*' --output-file coverage.info.cleaned
     - lcov --list coverage.info.cleaned
     - bash <(curl -s https://codecov.io/bash) -f coverage.info.cleaned
     
