--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ script:
     - ctest -V
 
 after_success:
-    - lcov --directory src --capture --output-file coverage.info
-    - lcov --remove coverage.info '*/moc_*' '*/Qt/*' '*/3rdparty/*' 'test/*' '/usr/*' --output-file coverage.info.cleaned
-    - lcov --list coverage.info.cleaned
-    - bash <(curl -s https://codecov.io/bash) -f coverage.info.cleaned
+   # - lcov --directory src --capture --output-file coverage.info
+   # - lcov --remove coverage.info '*/moc_*' '*/Qt/*' '*/3rdparty/*' 'test/*' '/usr/*' --output-file coverage.info.cleaned
+   # - lcov --list coverage.info.cleaned
+    - bash <(curl -s https://codecov.io/bash)
 
