--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -25,7 +25,26 @@ set_target_properties(libgmock PROPERTIES
 include_directories("${source_dir}/include")
 include_directories("${source_dir}/gtest/include")
 
+##
+## Configure boost
+##
+message("boost libs not found! boost will be downloaded.")
+# Download and install Boost
+ExternalProject_Add(
+    boost
+    URL http://sourceforge.net/projects/boost/files/boost/1.58.0/boost_1_58_0.tar.gz
+    #SVN_REPOSITORY http://googlemock.googlecode.com/svn/trunk
+    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/3rdparty/boost
+    # Disable install step
+    INSTALL_COMMAND ""
+    UPDATE_COMMAND ""
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND ""
+)
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/3rdparty/boost/src/boost")
+
 set(MODULES qbson qtejdb itemmodel qtquickplugin)
+
 set(ALL_SRC)
 set(ALL_HDRS)
 set(PUB_HDRS)
@@ -46,5 +65,19 @@ include_directories(
 )
 
 add_executable(qtejdbtest ${ALL_SRC})
-target_link_libraries (qtejdbtest Qt5::Core qejdbplugin libgmock)
+if(WIN32)
+    add_custom_command(
+        TARGET qtejdbtest POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARY_OUTPUT_PATH}/libqejdbplugin.dll ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARY_OUTPUT_PATH}/libejdb.dll ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARY_OUTPUT_PATH}/libqtejdb.dll ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${CMAKE_COMMAND} -E copy ${LIBRARY_OUTPUT_PATH}/libzlib.dll ${CMAKE_CURRENT_BINARY_DIR}
+    )
+
+endif()
+if (NOT WIN32)
+    target_link_libraries (qtejdbtest Qt5::Core qejdbplugin ejdb_p libgmock pthread)
+else()
+    target_link_libraries (qtejdbtest Qt5::Core qejdbplugin libgmock)
+endif(NOT WIN32)
 add_test(QtEjdbUnitTest qtejdbtest)
